--- a/dist.ini
+++ b/dist.ini
@@ -4,10 +4,13 @@ license = Perl_5
 copyright_holder = Jon Portnoy
 copyright_year   = 2014
 
-version = 0.000_002
+version = 0.000_003
 
 [@Basic]
 [MetaJSON]
+[MetaNoIndex]
+dir = tools
+dir = examples
 
 [@Git]
 allow_dirty  = Changes
