--- a/META.yml
+++ b/META.yml
@@ -30,8 +30,11 @@ requires:
   List::Objects::WithUtils: 2.013
   Math::Int64: 0
   Moo: 1
+  MooX::Role::POE::Emitter: 0.12
   MooX::late: 0.014
+  POE: 0
   POSIX: 0
+  Throwable: 0
   Time::HiRes: 0
   Try::Tiny: 0
   Type::Tiny: 0.04
@@ -39,4 +42,4 @@ requires:
   strictures: 1
 resources:
   repository: git://github.com/avenj/poex-zmq.git
-version: 0.000_003
+version: 0.000_004
