--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Jon Portnoy
 copyright_year   = 2014
 
-version = 0.000_003
+version = 0.000_004
 
 [@Basic]
 [MetaJSON]
@@ -75,6 +75,12 @@ Math::Int64 = 0
 
 Moo         = 1
 MooX::late  = 0.014
+
+MooX::Role::POE::Emitter = 0.12
+
+POE         = 0
+
+Throwable   = 0
 
 Type::Tiny  = 0.04
 
