Import of AVENJ/POEx-ZMQ-0.000_006 from CPAN.
gitpan-cpan-distribution: POEx-ZMQ
gitpan-cpan-version:      0.000_006
gitpan-cpan-path:         AVENJ/POEx-ZMQ-0.000_006.tar.gz
gitpan-cpan-author:       AVENJ
gitpan-cpan-maturity:     developer

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Jon Portnoy
 copyright_year   = 2014
 
-version = 0.000_005
+version = 0.000_006
 
 [@Basic]
 [MetaJSON]
@@ -91,6 +91,7 @@ Try::Tiny   = 0
 ; 0.96 for subtests without plan
 ; 0.88 for done_testing
 Test::More = 0.96
+Test::TCP  = 0
 
 [Run::AfterBuild]
 run = cp %d%pREADME.mkdn .
