--- a/META.yml
+++ b/META.yml
@@ -8,6 +8,7 @@ build_requires:
   List::Util: 0
   Scalar::Util: 0
   Test::More: 0.96
+  Test::TCP: 0
   version: 0.77
 configure_requires:
   Devel::CheckLib: 0
@@ -42,4 +43,4 @@ requires:
   strictures: 1
 resources:
   repository: git://github.com/avenj/poex-zmq.git
-version: 0.000_005
+version: 0.000_006
