--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Jon Portnoy
 copyright_year   = 2014
 
-version = 0.000_006
+version = 0.001001
 
 [@Basic]
 [MetaJSON]
@@ -68,6 +68,8 @@ Exporter::Tiny  = 0
 
 FFI::Raw        = 0
 
+Import::Into = 0
+
 List::Objects::WithUtils = 2.013
 List::Objects::Types     = 1.002
 
@@ -91,7 +93,6 @@ Try::Tiny   = 0
 ; 0.96 for subtests without plan
 ; 0.88 for done_testing
 Test::More = 0.96
-Test::TCP  = 0
 
 [Run::AfterBuild]
 run = cp %d%pREADME.mkdn .
