Import of AVENJ/POEx-ZMQ-0.002001 from CPAN.
gitpan-cpan-distribution: POEx-ZMQ
gitpan-cpan-version:      0.002001
gitpan-cpan-path:         AVENJ/POEx-ZMQ-0.002001.tar.gz
gitpan-cpan-author:       AVENJ
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -30,6 +30,7 @@ requires:
   List::Objects::Types: 1.002
   List::Objects::WithUtils: 2.013
   Math::Int64: 0
+  Module::Runtime: 0
   Moo: 1
   MooX::Role::POE::Emitter: 0.12
   MooX::late: 0.014
@@ -39,8 +40,9 @@ requires:
   Time::HiRes: 0
   Try::Tiny: 0
   Type::Tiny: 0.04
-  perl: v5.10.1
+  namespace::clean: 0
+  perl: v5.16.0
   strictures: 1
 resources:
   repository: git://github.com/avenj/poex-zmq.git
-version: 0.001002
+version: 0.002001
