--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Jon Portnoy
 copyright_year   = 2014
 
-version = 0.001002
+version = 0.002001
 
 [@Basic]
 [MetaJSON]
@@ -58,7 +58,7 @@ check_all_prereqs = 1
 lib = zmq
 
 [Prereqs]
-perl        = 5.10.1
+perl        = 5.16.0
 POSIX       = 0
 Time::HiRes = 0
 
@@ -75,10 +75,14 @@ List::Objects::Types     = 1.002
 
 Math::Int64 = 0
 
+Module::Runtime = 0
+
 Moo         = 1
 MooX::late  = 0.014
 
 MooX::Role::POE::Emitter = 0.12
+
+namespace::clean = 0
 
 POE         = 0
 
