Import of AVENJ/POEx-ZMQ-0.005001 from CPAN.
gitpan-cpan-distribution: POEx-ZMQ
gitpan-cpan-version:      0.005001
gitpan-cpan-path:         AVENJ/POEx-ZMQ-0.005001.tar.gz
gitpan-cpan-author:       AVENJ
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Jon Portnoy
 copyright_year   = 2014
 
-version = 0.004001
+version = 0.005001
 
 [@Basic]
 [MetaJSON]
@@ -92,6 +92,9 @@ Type::Tiny  = 0.04
 
 Try::Tiny   = 0
 
+
+[Prereqs / RuntimeRecommends]
+Convert::Z85 = 0
 
 [Prereqs / TestRequires]
 ; 0.96 for subtests without plan
