--- a/META.yml
+++ b/META.yml
@@ -10,7 +10,7 @@ configure_requires:
   Devel::CheckLib: 0.9
   ExtUtils::MakeMaker: 0
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142060'
+generated_by: 'Dist::Zilla version 5.020, CPAN::Meta::Converter version 2.142690'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,6 +20,8 @@ no_index:
   directory:
     - tools
     - examples
+recommends:
+  Convert::Z85: 0
 requires:
   Exporter::Tiny: 0
   FFI::Raw: 0
@@ -42,4 +44,4 @@ requires:
   strictures: 1
 resources:
   repository: git://github.com/avenj/poex-zmq.git
-version: 0.004001
+version: 0.005001
