Import of AVENJ/POEx-ZMQ-0.005003.tar.gz from CPAN.
gitpan-cpan-distribution: POEx-ZMQ
gitpan-cpan-version:      0.005003
gitpan-cpan-path:         AVENJ/POEx-ZMQ-0.005003.tar.gz
gitpan-cpan-author:       AVENJ
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -7,10 +7,10 @@ build_requires:
   File::Spec: 0
   Test::More: 0.96
 configure_requires:
-  Devel::CheckLib: 0.9
   ExtUtils::MakeMaker: 0
+  FFI::CheckLib: 0.03
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 5.021, CPAN::Meta::Converter version 2.142690'
+generated_by: 'Dist::Zilla version 5.025, CPAN::Meta::Converter version 2.142690'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,26 +22,27 @@ no_index:
     - examples
 recommends:
   Convert::Z85: 0
+  Crypt::ZCert: 0
 requires:
   Exporter::Tiny: 0
   FFI::Raw: 0
   Import::Into: 0
   List::Objects::Types: 1.002
-  List::Objects::WithUtils: 2.013
+  List::Objects::WithUtils: 2.016
   Math::Int64: 0
   Module::Runtime: 0
-  Moo: 1
+  Moo: 0
   MooX::Role::POE::Emitter: 0.12
   MooX::late: 0.014
-  POE: 0
+  POE: 1
   POSIX: 0
   Throwable: 0
   Time::HiRes: 0
   Try::Tiny: 0
   Type::Tiny: 0.04
   namespace::clean: 0
-  perl: v5.16.0
+  perl: 5.016
   strictures: 1
 resources:
   repository: git://github.com/avenj/poex-zmq.git
-version: 0.005002
+version: 0.005003
