--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = Jon Portnoy
 copyright_year   = 2014
 
-version = 0.005002
+version = 0.005003
 
 [@Basic]
 [MetaJSON]
@@ -16,8 +16,10 @@ dir = examples
 allow_dirty  = Changes
 allow_dirty  = dist.ini
 allow_dirty  = README.mkdn
+allow_dirty  = cpanfile
 add_files_in = Changes
 add_files_in = dist.ini
+add_files_in = cpanfile
 add_files_in = README.mkdn
 tag_format   = '%v'
 tag_message  = 'dist %v'
@@ -54,52 +56,10 @@ phase =  release
 check_all_plugins = 1
 check_all_prereqs = 1
 
-[CheckLib]
+[FFI::CheckLib]
 lib = zmq
 
-[Prereqs]
-perl        = 5.16.0
-POSIX       = 0
-Time::HiRes = 0
-
-strictures  = 1
-
-Exporter::Tiny  = 0
-
-FFI::Raw        = 0
-
-Import::Into = 0
-
-List::Objects::WithUtils = 2.013
-List::Objects::Types     = 1.002
-
-Math::Int64 = 0
-
-Module::Runtime = 0
-
-Moo         = 1
-MooX::late  = 0.014
-
-MooX::Role::POE::Emitter = 0.12
-
-namespace::clean = 0
-
-POE         = 0
-
-Throwable   = 0
-
-Type::Tiny  = 0.04
-
-Try::Tiny   = 0
-
-
-[Prereqs / RuntimeRecommends]
-Convert::Z85 = 0
-
-[Prereqs / TestRequires]
-; 0.96 for subtests without plan
-; 0.88 for done_testing
-Test::More = 0.96
+[Prereqs::FromCPANfile]
 
 [Run::AfterBuild]
 run = cp %d%pREADME.mkdn .
